examples/negative/parse_errors/L1/reserved_div.ob
MODULE Reserved;

VAR DIV: INTEGER;

END Reserved.
